<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragments.EditCardDialogFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp"
        >
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/card_number">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_cardnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTint="@color/indigo_300"
                android:drawablePadding="10dp"/>


        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expiration_month_year">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_expiration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTint="@color/indigo_300"
                android:drawablePadding="10dp"/>


        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cvv">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_cvv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableTint="@color/indigo_300"
                android:drawablePadding="10dp"/>


        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />

</LinearLayout>