<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/capture_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Capture photo" />

    <Button
        android:id="@+id/edit_card_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_card" />

    <Button
        android:id="@+id/sign_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_out_button" />


</LinearLayout>


