<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/maps"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/map" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />
</menu>